<resources>
    <string name="app_name">AstroWeather</string>
    <string name="sun">Słońce</string>
    <string name="moon">Księżyc</string>
    <string name="time">Czas</string>
    <string name="azimuth">Azymut</string>
    <string name="rise">Wschód</string>
    <string name="set">Zachód</string>
    <string name="civil_morning">Świt cywilny</string>
    <string name="civil_evening">Zmierzch cywilny</string>
    <string name="moon_age">Dzień miesiąca\n synodycznego</string>
    <string name="moon_illumination">Faza księżyca</string>
    <string name="full_moon">Pełnia</string>
    <string name="new_moon">Nów</string>
    <string name="weather_data">Dane pogodowe</string>
    <string name="temperature">Temperatura</string>
    <string name="pressure">Ciśnienie</string>
    <string name="wind_force">Siła wiatru</string>
    <string name="wind_direction">Kierunek wiatru</string>
    <string name="humidity">Wilgotność</string>
    <string name="visibility">Widoczność</string>
    <string name="description">Opis</string>
    <string name="weather_forecast">Prognoza pogody</string>
    <string name="date">Data</string>

    <string name="settings">Ustawienia</string>
    <string name="update">Odśwież</string>
    <string name="location">Lokalizacja</string>
    <string name="update_freq">Częstotliwość odświeżania danych</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="latitude_error">Szerokość geograficzna nie może być większa niż 90</string>
    <string name="longitude_error">Długość geograficzna nie może być większa niż 180</string>
    <string name="format_error">Błąd - nieprawidłowy format danych</string>
    <string name="no_connection">Brak połączenia z Internetem</string>
    <string name="download_error">Błąd podczas pobierania danych</string>
    <string name="file_write_error">Błąd podczas zapisu do pliku</string>
    <string name="file_read_error">Błąd podczas odczytu z pliku</string>

    <string-array name="latitude_array">
        <item>N</item>
        <item>S</item>
    </string-array>
    <string-array name="longitude_array">
        <item>E</item>
        <item>W</item>
    </string-array>
    <string-array name="freq_array">
        <item>1 minuta</item>
        <item>5 minut</item>
        <item>15 minut</item>
        <item>30 minut</item>
        <item>60 minut</item>
    </string-array>
</resources>
