<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pam.astroweather.SunFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/rise_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rise"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/set_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/set"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/civil_morning_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civil_morning"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/civil_evening_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/civil_evening"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/time_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/rise_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="00:00:00"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/set_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="00:00:00"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/civil_morning_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="00:00:00"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/civil_evening_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="00:00:00"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/azimuth_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:text="@string/azimuth"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/rise_azimuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:text="0.0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/set_azimuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:text="0.0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:text="-"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:text="-"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
